Added new Homework №3, added advcanced tasks for homework №3 and lesson №3, a lot of fixes

--- a/Lessons/Lesson2/index.html
+++ b/Lessons/Lesson2/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<h1 align="center">Дневник партизана</h1>
+<h1 style="text-align:center">Дневник партизана</h1>
 <img src="img/RedArmy.gif" alt="Red Army Image">
 <ol>
     <li><strong>Вторник.</strong> Выбили <a href="https://www.google.com/">немцев</a> с опушки. Засели в <img
-            src="data:image/gif;base64,R0lGODlhDgAQAJEAAP///+bm5mZmZgAAACwAAAAADgAQAAACKYSPqct9IhyAsMEQqro8ot49QkaFYDlqKPpRWNlepGaULxWPs1e7u1EAADs=">
+            src="data:image/gif;base64,R0lGODlhDgAQAJEAAP///+bm5mZmZgAAACwAAAAADgAQAAACKYSPqct9IhyAsMEQqro8ot49QkaFYDlqKPpRWNlepGaULxWPs1e7u1EAADs=" alt="house icon">
         доме
         лесника.
     </li>
