--- a/HomeWork/HomeWork№1/a/index.html
+++ b/HomeWork/HomeWork№1/a/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<h1 align="center">Дневник партизана</h1>
+<h1 style="text-align:center">Дневник партизана</h1>
 <ol>
-    <li><strong>Вторник.</strong> Выбили <a href="https:\\www.google.com" title="go to google.com" target="_blank">немцев</a> с опушки. Засели в доме лесника.</li>
+    <li><strong>Вторник.</strong> Выбили <a href="https://www.google.com" title="go to google.com" target="_blank">немцев</a>
+        с опушки. Засели в доме лесника.
+    </li>
     <li><strong>Среда.</strong> Мощная контратака немцев вынудила нас оставить занятые ранее позиции.</li>
     <li><strong>Четверг.</strong> Под покровом ночи смогли снова засесть в доме лесника. Курим «Беломор».</li>
     <li><strong>Пятница.</strong> Вернулся лесник и всех выгнал.</li>
 </ol>
-<p>&copy; бородатый <a href="https:\\www.onliner.by" title="news for you" target="_blank">анекдот</a></p>
+<p>&copy; бородатый <a href="https://www.onliner.by" title="news for you" target="_blank">анекдот</a></p>
 </body>
 </html>
