--- a/HomeWork/HomeWork№3/FONT_GWF/index.html
+++ b/HomeWork/HomeWork№3/FONT_GWF/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Try fonts</title>
-    <link href="https://fonts.googleapis.com/css?family=Marck+Script|Pacifico&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Marck+Script&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap&subset=cyrillic" rel="stylesheet">
 </head>
 <body>
 <div>
-    <h1 align="center" style="font-family: Pacifico">Александр Пушкин &mdash; Во глубине сибирских руд: Стих</h1>
+    <h1 style="font-family: Pacifico; text-align:center">Александр Пушкин &mdash; Во глубине сибирских руд: Стих</h1>
 
     <p style="font-family: Marck Script; font-size: 25px">
         Во глубине сибирских руд<br>
