Added file after lesson4

--- a/Lessons/Lesson3/Advanced/DifferentTags/index.html
+++ b/Lessons/Lesson3/Advanced/DifferentTags/index.html
@@ -76,7 +76,7 @@
     <h2>Комментарии и литералы(мнемоники) в HTML</h2>
     <pre>&lt;!&ndash;&ndash; это комментaрий &ndash;&ndash;&gt;
                 &lt;!&ndash;&ndash; и это также комментраий,
-                заниающий более 1 строки &ndash;&ndash;&gt;</pre>
+                занимающий более 1 строки &ndash;&ndash;&gt;</pre>
 </div>
 <hr>
 <div id="upStringDownStringSymbols">
