Changes to lesson 4 files

--- a/Lessons/Lesson4/3_70/index.html
+++ b/Lessons/Lesson4/3_70/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1 style="border: dashed red 3px">Simon and Garfunkel</h1>
+
 <div style="border: solid green 1px">
     <p>
         В 1964 году на лейбле Columbia был выпущен их дебютный альбом «Wednesday Morning 3AM». Пластинка прошла
@@ -27,7 +28,9 @@
         образчики этого направления рок-музыки.
     </p>
 </div>
+
 <br>
+
 <div style="border-top: dotted black 1px; border-bottom:solid green 3px; border-left:blue solid 1px; border-right:double red 3px;">
     <h2>Студийные альбомы</h2>
     <ul style="list-style-type: square;">
@@ -39,8 +42,11 @@
         <li>Bridge Over Troubled Water (1970)</li>
     </ul>
 </div>
-<p style="border: solid green 1px">Несмотря на отдельные яркие песни, альбомы Саймона и Гарфанкела были по большей части
-    неровными и оставляли ощущение
-    недоговорённости. Наиболее радикальные критики были склонны обвинять дуэт в слащавости и стерильности.</p>
+
+<p style="border: solid green 1px">
+    Несмотря на отдельные яркие песни, альбомы Саймона и Гарфанкела были по большей части
+    неровными и оставляли ощущение недоговорённости. Наиболее радикальные критики были склонны обвинять дуэт в
+    слащавости и стерильности.
+</p>
 </body>
 </html>
