Added Homework №4 and Lesson №5

--- a/HomeWork/HomeWork№4/DIV_FRAME/index.html
+++ b/HomeWork/HomeWork№4/DIV_FRAME/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<div style="padding: 1px;
+<div style="
 background:
-url('img/leftMid.gif') no-repeat left,
-url('img/topMid.gif') no-repeat top,
-url('img/botMid.gif') no-repeat bottom,
-url('img/rMid.gif') no-repeat right,
-url('img/leftTop.gif') no-repeat left top,
-url('img/rTop.gif') no-repeat right top,
-url('img/leftBot.gif') no-repeat left bottom,
-url('img/rBot.gif') no-repeat right bottom;">
+url('img/leftTopN.gif') no-repeat left top,
+url('img/rightTopN.gif') no-repeat right top,
+url('img/leftBottom.gif') no-repeat left bottom,
+url('img/rightBottom.gif') no-repeat right bottom,
+url('img/leftMidN.gif') repeat-y left,
+url('img/topMidN.gif') repeat-x top,
+url('img/rightMidN.gif') repeat-y right,
+url('img/bottomMidN.gif') repeat-x bottom;">
 
-    <p style="margin-top: 20%; margin-right: 20%; margin-left: 20%">
+    <p style="padding: 50px; font-size: 7mm">
         Бериллий &mdash; элемент главной подгруппы второй группы, второго периода периодической системы химических элементов Д.
         И. Менделеева, с атомным номером 4. Обозначается символом Be (лат. Beryllium). Высокотоксичный элемент. Простое
         вещество бериллий &mdash; относительно твёрдый металл светло-серого цвета.
