--- a/Lessons/Lesson5/cosmo/index.html
+++ b/Lessons/Lesson5/cosmo/index.html
@@ -12,9 +12,6 @@
     <title>Title</title>
 </head>
 <body>
-<div style="background-color: #cccccc;">
-
-    <!--Да, я знаю что можно было через background-color: #cccccc; именно в этом div-e. Но ругался WebStorm :-)-->
     <div style=" background:
             url('img/b-l.gif') no-repeat bottom left,
             url('img/b-r.gif') no-repeat bottom right,
@@ -23,7 +20,7 @@
             url('img/b.gif') repeat-x bottom,
             url('img/t.gif') repeat-x top,
             url('img/r.gif') repeat-y right center,
-            url('img/l.gif') repeat-y left center;">
+            url('img/l.gif') repeat-y left center, #cccccc;">
 
         <p style="padding: 50px; font-size: 7mm; ">
             Бериллий &mdash; элемент главной подгруппы второй группы, второго периода периодической системы химических
@@ -32,8 +29,6 @@
         </p>
 
     </div>
-
-</div>
 
 </body>
 </html>
