Finished task 3 for Lesson 6

--- a/Lessons/Lesson6/task3/index.html
+++ b/Lessons/Lesson6/task3/index.html
@@ -5,57 +5,54 @@
     <title>Task 3</title>
 </head>
 <body>
-
-<div style="background-color: green">
-
-    <div style="background: url('img/ball3.png') left top no-repeat,
-                            url('img/ball3.png') right top no-repeat,
-                            url('img/ball3.png') left bottom no-repeat,
-                            url('img/ball3.png') right bottom no-repeat, #6dacac;">
-    <div style="float: left; width: 20%;">
-        Width 20% Width 20% Width 20% Width 20% Width 20% Width 20% Width 20%
-        Width 20% Width 20% Width 20% Width 20% Width 20% Width 20% Width 20%
-        Width 20% Width 20% Width 20% Width 20% Width 20% Width 20% Width 20%
-        Width 20% Width 20% Width 20% Width 20% Width 20% Width 20% Width 20%
-        Width 20% Width 20% Width 20% Width 20% Width 20% Width 20% Width 20%
-        Width 20% Width 20% Width 20% Width 20% Width 20% Width 20% Width 20%
-        Width 20% Width 20% Width 20% Width 20% Width 20% Width 20% Width 20%
-        Width 20% Width 20% Width 20% Width 20% Width 20% Width 20% Width 20%
-        Width 20% Width 20% Width 20% Width 20% Width 20% Width 20% Width 20%
+<div style="background:
+            url('img/ball3.png') no-repeat,
+            url('img/ball3.png') no-repeat top right,
+            url('img/ball3.png') no-repeat bottom right,
+            url('img/ball3.png') no-repeat bottom left,
+            url('img/ball3.png') no-repeat bottom right 200px,
+            url('img/ball3.png') no-repeat top right 200px,
+            url('img/ball3.png') no-repeat bottom right 100px,
+            url('img/ball3.png') no-repeat top right 100px,
+            url('img/twoBalls.png') 20% top no-repeat,
+            url('img/twoBalls.png') 20% bottom no-repeat,
+            url('img/purple.png') right top repeat-y,
+            url('img/green_red.png') 20% top repeat-y">
+    <div style="width: 20%; float: left">
+        Width 20% Width 20% Width 20% Width 20% Width 20% Width 20%
+        Width 20% Width 20% Width 20% Width 20% Width 20% Width 20%
+        Width 20% Width 20% Width 20% Width 20% Width 20% Width 20%
+        Width 20% Width 20% Width 20% Width 20% Width 20% Width 20%
+        Width 20% Width 20% Width 20% Width 20% Width 20% Width 20%
+        Width 20% Width 20% Width 20% Width 20% Width 20% Width 20%
+        Width 20% Width 20% Width 20% Width 20% Width 20% Width 20%
+        Width 20% Width 20% Width 20% Width 20% Width 20% Width 20%
     </div>
+    <div style='width: 200px; float: right'>
+        Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px
+        Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px
+        Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px
+        Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px
+        Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px
+        Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px
     </div>
-
-    <div style="float: right; width: 200px;
-                background: url('img/ball3.png') left top no-repeat,
-                            url('img/ball3.png') right top no-repeat,
-                            url('img/ball3.png') left bottom no-repeat,
-                            url('img/ball3.png') right bottom no-repeat,#c07475">
-        Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px
-        Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px
-        Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px
-        Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px
-        Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px
-        Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px
-        Width 200px Width 200px Width 200px Width 200px Width 200px Width 200px
-    </div>
-
-    <div style="margin-left: 20%; margin-right: 200px;
-                background: url('img/ball3.png') left top no-repeat,
-                            url('img/ball3.png') right top no-repeat,
-                            url('img/ball3.png') left bottom no-repeat,
-                            url('img/ball3.png') right bottom no-repeat,#d1a0da">
-        Content Content Content Content Content Content Content Content
-        Content Content Content Content Content Content Content Content Content
-        Content Content Content Content Content Content Content Content Content Content Content
-        Content Content Content Content Content Content Content Content Content Content Content Content
-        Content Content Content Content Content Content Content Content Content Content Content
-        Content Content Content Content Content Content Content Content Content Content Content
+    <div style="margin-left: 20%; margin-right: 200px">
+        Content Content Content Content Content Content Content Content Content Content
+        Content Content Content Content Content Content Content Content Content Content
+        Content Content Content Content Content Content Content Content Content Content
+        Content Content Content Content Content Content Content Content Content Content
+        Content Content Content Content Content Content Content Content Content Content
+        Content Content Content Content Content Content Content Content Content Content
+        Content Content Content Content Content Content Content Content Content Content
+        Content Content Content Content Content Content Content Content Content Content
+        Content Content Content Content Content Content Content Content Content Content
+        Content Content Content Content Content Content Content Content Content Content
+        Content Content Content Content Content Content Content Content Content Content
+        Content Content Content Content Content Content Content Content Content Content
+        Content Content Content Content Content Content Content Content Content Content
         Content Content Content Content Content Content Content Content Content Content
     </div>
-
-    <div style="clear: both"></div>
-
+    <div style='clear: both'></div>
 </div>
-
 </body>
 </html>
