Added task for lesson 8

--- a/Lessons/Lesson6/task3/index.html
+++ b/Lessons/Lesson6/task3/index.html
@@ -14,8 +14,10 @@
             url('img/ball3.png') no-repeat top right 200px,
             url('img/ball3.png') no-repeat bottom right 100px,
             url('img/ball3.png') no-repeat top right 100px,
-            url('img/twoBalls.png') 20% top no-repeat,
-            url('img/twoBalls.png') 20% bottom no-repeat,
+            url('img/ball3.png') no-repeat top left 21%,
+            url('img/ball3.png') no-repeat bottom left 21%,
+            url('img/ball3.png') no-repeat top left 15.5%,
+            url('img/ball3.png') no-repeat bottom left 15.5%,
             url('img/purple.png') right top repeat-y,
             url('img/green_red.png') 20% top repeat-y">
     <div style="width: 20%; float: left">
