Second part of my first maket

--- a/Lessons/Lesson9/maket/index.html
+++ b/Lessons/Lesson9/maket/index.html
@@ -7,8 +7,11 @@
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/slider.css">
+    <link rel="stylesheet" href="css/welcome.css">
+    <link rel="stylesheet" href="css/recent.css">
 </head>
 <body>
+
 <div class="headerContainer">
 
     <p class="logoTextStyle">Nipro Agency</p>
@@ -28,7 +31,7 @@
 
 <div class="sliderContainer">
     <div class="sliderContent">
-        <h1>We Have Talented Team</h1>
+        <p>We Have Talented Team</p>
         <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. hello Lorem Ipsum has been the
             industry's stanard dummy text ever since the hello bossLorem Ipsum is simply dummy text of the printing
@@ -46,6 +49,81 @@
         </ul>
         <div style="clear: both"></div>
     </div>
+</div>
+
+<div class="welcomeBlock">
+    <h1>welcome to nipro</h1>
+    <p class="welcomeText">
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+        standard dummy text ever he to since the 1500s, when an unknown printer took a galley of type and scrambled it
+        to make a type specimen book. It has survived not centuries, but also the leap into electronic typesetting,
+        remaining essentially unchanged. It was popularised in the er including versions of Lorem Ipsum.
+    </p>
+    <ul>
+        <li>
+            <div class="brilliant"></div>
+            <p>Branding</p>
+            <div class="shape"></div>
+            <p>Lorem Ipsum is simply dummy the printing typeset industry Lorem Ipsum has been the</p>
+            <p>More &nbsp; &rarr;</p>
+        </li>
+        <li>
+            <div class="rocket"></div>
+            <p>UI & UX</p>
+            <div class="shape"></div>
+            <p>Lorem Ipsum is simply dummy the printing typeset industry Lorem Ipsum has been the</p>
+            <p>More &nbsp; &rarr;</p>
+        </li>
+        <li>
+            <div class="mark"></div>
+            <p>APP Design</p>
+            <div class="shape"></div>
+            <p>Lorem Ipsum is simply dummy the printing typeset industry Lorem Ipsum has been the</p>
+            <p>More &nbsp; &rarr;</p>
+        </li>
+        <li>
+            <div class="shield"></div>
+            <p>Web Design</p>
+            <div class="shape"></div>
+            <p>Lorem Ipsum is simply dummy the printing typeset industry Lorem Ipsum has been the</p>
+            <p>More &nbsp; &rarr;</p>
+        </li>
+        <div style="clear: both"></div>
+    </ul>
+</div>
+
+<div class="grayFont">
+    <div class="recentWork">
+        <h1>Recent Work</h1>
+        <ul>
+            <li>All</li>
+            <li>App Design</li>
+            <li>Web Design</li>
+            <li>UI Design</li>
+            <li>Photoshop</li>
+        </ul>
+        <ul class="portfolio">
+            <li>
+                <img src="img/recent/portfolio1.png" alt="">
+            </li>
+            <li>
+                <img src="img/recent/portfolio2.png" alt="">
+            </li>
+            <li>
+                <img src="img/recent/portfolio3.png" alt="">
+            </li>
+            <li>
+                <img src="img/recent/portfolio4.png" alt="">
+            </li>
+            <li>
+                <img src="img/recent/portfolio5.png" alt="">
+            </li>
+            <li>
+                <img src="img/recent/portfolio6.png" alt="">
+            </li>
+        </ul>
+    </div>
+    <div style="clear: both"></div>
 </div>
 </body>
 </html>
