--- a/Lessons/Lesson9/maket/index.html
+++ b/Lessons/Lesson9/maket/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/slider.css">
     <link rel="stylesheet" href="css/welcome.css">
     <link rel="stylesheet" href="css/recent.css">
+    <link rel="stylesheet" href="css/whyNipro.css">
+    <link rel="stylesheet" href="css/whoWork.css">
+    <link rel="stylesheet" href="css/bestPractice.css">
 </head>
 <body>
 
@@ -60,28 +63,28 @@
         remaining essentially unchanged. It was popularised in the er including versions of Lorem Ipsum.
     </p>
     <ul>
-        <li>
+        <li class="forHover">
             <div class="brilliant"></div>
             <p>Branding</p>
             <div class="shape"></div>
             <p>Lorem Ipsum is simply dummy the printing typeset industry Lorem Ipsum has been the</p>
             <p>More &nbsp; &rarr;</p>
         </li>
-        <li>
+        <li class="forHover">
             <div class="rocket"></div>
             <p>UI & UX</p>
             <div class="shape"></div>
             <p>Lorem Ipsum is simply dummy the printing typeset industry Lorem Ipsum has been the</p>
             <p>More &nbsp; &rarr;</p>
         </li>
-        <li>
+        <li class="forHover">
             <div class="mark"></div>
             <p>APP Design</p>
             <div class="shape"></div>
             <p>Lorem Ipsum is simply dummy the printing typeset industry Lorem Ipsum has been the</p>
             <p>More &nbsp; &rarr;</p>
         </li>
-        <li>
+        <li class="forHover">
             <div class="shield"></div>
             <p>Web Design</p>
             <div class="shape"></div>
@@ -107,7 +110,14 @@
                 <img src="img/recent/portfolio1.png" alt="">
             </li>
             <li>
-                <img src="img/recent/portfolio2.png" alt="">
+                <div>
+                    <div>
+                    </div>
+                    <div class="portfolioTextOnImage">
+                        <p>Project Title</p>
+                        <p>App Design</p>
+                    </div>
+                </div>
             </li>
             <li>
                 <img src="img/recent/portfolio3.png" alt="">
@@ -124,6 +134,130 @@
         </ul>
     </div>
     <div style="clear: both"></div>
+</div>
+
+<div class="whyNipro">
+    <h1>Why Choose Nipro</h1>
+    <ul>
+        <li class="whyNiproHover">
+            <div class="whyNipro1Img"></div>
+            <p>Creative Design</p>
+            <p>Lorem Ipsum is simply dummy lol Is the printing typesetting industry. Lorem some </p>
+        </li>
+        <li class="whyNiproHover">
+            <div class="whyNipro2Img"></div>
+            <p>Minimal Design</p>
+            <p>Lorem Ipsum is simply dummy lol Is the printing typesetting industry. Lorem some </p>
+        </li>
+        <li class="whyNiproHover">
+            <div class="whyNipro3Img"></div>
+            <p>Retina Display</p>
+            <p>Lorem Ipsum is simply dummy lol Is the printing typesetting industry. Lorem some </p>
+        </li>
+        <li class="whyNiproHover">
+            <div class="whyNipro4Img"></div>
+            <p>Full Responsive</p>
+            <p>Lorem Ipsum is simply dummy lol Is the printing typesetting industry. Lorem some </p>
+        </li>
+        <li class="whyNiproHover">
+            <div class="whyNipro5Img"></div>
+            <p>Updates & Support</p>
+            <p>Lorem Ipsum is simply dummy lol Is the printing typesetting industry. Lorem some </p>
+        </li>
+        <li class="whyNiproHover">
+            <div class="whyNipro6Img"></div>
+            <p>Easy to Customize</p>
+            <p>Lorem Ipsum is simply dummy lol Is the printing typesetting industry. Lorem some </p>
+        </li>
+        <div style="clear: both"></div>
+
+    </ul>
+
+</div>
+
+<div class="whoWorkBackground">
+    <div class="whoWork">
+        <h1>Who Work With US</h1>
+        <ul>
+            <li>
+                <div class="man1"></div>
+                <div class="whoTextOnImage">
+                    <p>Ashiful Haque Pappu</p>
+                    <p>UI/UX Designer</p>
+                </div>
+            </li>
+            <li>
+                <div class="man2"></div>
+                <div class="whoTextOnImage">
+                    <p>Al-Rayhan</p>
+                    <p>Interface Designer</p>
+                </div>
+            </li>
+            <li>
+                <div class="man3"></div>
+                <div class="whoTextOnImage">
+                    <p>Santush Deb Nath</p>
+                    <p>Web Developer</p>
+                </div>
+            </li>
+            <li>
+                <div class="man4"></div>
+                <div class="whoTextOnImage">
+                    <p>Saif Ullah Patowary</p>
+                    <p>Web Designer</p>
+                </div>
+            </li>
+            <div style="clear: both"></div>
+        </ul>
+    </div>
+</div>
+
+<div class="bestPractice">
+    <h1>Best Pricing</h1>
+    <ul>
+        <li class="hoverBestPractice">
+            <div>
+                <p class="basicPrice">basic</p>
+            </div>
+            <div>
+                <p class="many">
+                    $29
+                </p>
+                <p class="month">/Per Month</p>
+            </div>
+        </li>
+        <li class="hoverBestPractice">
+            <div>
+                <p class="standartPrice">Standard</p>
+            </div>
+            <div>
+                <p class="many">$29</p>
+                <p class="month">/Per Month</p>
+            </div>
+        </li>
+        <li class="hoverBestPractice">
+            <div>
+                <p class="enterprisePrice">Enterprise</p>
+            </div>
+            <div>
+                <p class="many">
+                    $29
+                </p>
+                <p class="month">/Per Month</p>
+            </div>
+        </li>
+        <li class="hoverBestPractice">
+            <div>
+                <p class="platinumPrice">Platinum</p>
+            </div>
+            <div>
+                <p class="many">
+                    $29
+                </p>
+                <p class="month">/Per Month</p>
+            </div>
+        </li>
+    </ul>
 </div>
 </body>
 </html>
