--- a/Lessons/Lesson9/maket/index.html
+++ b/Lessons/Lesson9/maket/index.html
@@ -214,48 +214,76 @@
 
 <div class="bestPractice">
     <h1>Best Pricing</h1>
-    <ul>
-        <li class="hoverBestPractice">
+    <ul class="mainUl">
+        <li class="hoverBestPractice clear">
             <div>
                 <p class="basicPrice">basic</p>
-            </div>
-            <div>
-                <p class="many">
-                    $29
-                </p>
-                <p class="month">/Per Month</p>
-            </div>
-        </li>
-        <li class="hoverBestPractice">
-            <div>
-                <p class="standartPrice">Standard</p>
             </div>
             <div>
                 <p class="many">$29</p>
                 <p class="month">/Per Month</p>
             </div>
+
+            <ul>
+                <li>1Th Storage</li>
+                <li>Unlimited Members</li>
+                <li>50 Project</li>
+                <li>70GB Bandwidth</li>
+                <li>24/7 Customer Support</li>
+            </ul>
         </li>
-        <li class="hoverBestPractice">
+        <li class="hoverBestPractice clear">
+            <div>
+                <p class="standartPrice">Standard</p>
+            </div>
+            <div>
+                <p class="many">$59</p>
+                <p class="month">/Per Month</p>
+            </div>
+
+            <ul>
+                <li>1Th Storage</li>
+                <li>Unlimited Members</li>
+                <li>50 Project</li>
+                <li>70GB Bandwidth</li>
+                <li>24/7 Customer Support</li>
+            </ul>
+        </li>
+        <li class="hoverBestPractice clear">
             <div>
                 <p class="enterprisePrice">Enterprise</p>
             </div>
             <div>
-                <p class="many">
-                    $29
-                </p>
+                <p class="many">$89</p>
                 <p class="month">/Per Month</p>
             </div>
+
+            <ul>
+                <li>1Th Storage</li>
+                <li>Unlimited Members</li>
+                <li>50 Project</li>
+                <li>70GB Bandwidth</li>
+                <li>24/7 Customer Support</li>
+            </ul>
         </li>
-        <li class="hoverBestPractice">
+        <li class="hoverBestPractice clear">
             <div>
                 <p class="platinumPrice">Platinum</p>
             </div>
             <div>
                 <p class="many">
-                    $29
+                    $199
                 </p>
                 <p class="month">/Per Month</p>
             </div>
+
+            <ul>
+                <li>1Th Storage</li>
+                <li>Unlimited Members</li>
+                <li>50 Project</li>
+                <li>70GB Bandwidth</li>
+                <li>24/7 Customer Support</li>
+            </ul>
         </li>
     </ul>
 </div>
