Finished tasks for lesson 12 (forms)

--- a/Lessons/Lesson12/form1/index.html
+++ b/Lessons/Lesson12/form1/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Form 1</title>
+
+    <style>
+        td {
+            width: 700px;
+            height: 200px;
+            vertical-align: top;
+            text-align: left;
+        }
+    </style>
 </head>
 <body>
 
