--- a/HomeWork/Homework№7/MAKET_DIV/index.html
+++ b/HomeWork/Homework№7/MAKET_DIV/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Maket DIV</title>
+    <title>Maket adapt homework 7</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/adapt.css">
 </head>
