added some changes to lesson9

--- a/Lessons/Lesson9/maket/index.html
+++ b/Lessons/Lesson9/maket/index.html
@@ -108,11 +108,18 @@
         <ul class="portfolio">
             <li>
                 <img src="img/recent/portfolio1.png" alt="">
+                <div class="hoverImage">
+                    <div class="target"></div>
+                    <div class="portfolioTextOnImage">
+                        <p>Project Title</p>
+                        <p>App Design</p>
+                    </div>
+                </div>
             </li>
             <li>
-                <div>
-                    <div>
-                    </div>
+                <img src="img/recent/portfolio2.png" alt="">
+                <div class="hoverImage">
+                    <div class="target"></div>
                     <div class="portfolioTextOnImage">
                         <p>Project Title</p>
                         <p>App Design</p>
@@ -121,15 +128,43 @@
             </li>
             <li>
                 <img src="img/recent/portfolio3.png" alt="">
+                <div class="hoverImage">
+                    <div class="target"></div>
+                    <div class="portfolioTextOnImage">
+                        <p>Project Title</p>
+                        <p>App Design</p>
+                    </div>
+                </div>
             </li>
             <li>
                 <img src="img/recent/portfolio4.png" alt="">
+                <div class="hoverImage">
+                    <div class="target"></div>
+                    <div class="portfolioTextOnImage">
+                        <p>Project Title</p>
+                        <p>App Design</p>
+                    </div>
+                </div>
             </li>
             <li>
                 <img src="img/recent/portfolio5.png" alt="">
+                <div class="hoverImage">
+                    <div class="target"></div>
+                    <div class="portfolioTextOnImage">
+                        <p>Project Title</p>
+                        <p>App Design</p>
+                    </div>
+                </div>
             </li>
             <li>
                 <img src="img/recent/portfolio6.png" alt="">
+                <div class="hoverImage">
+                    <div class="target"></div>
+                    <div class="portfolioTextOnImage">
+                        <p>Project Title</p>
+                        <p>App Design</p>
+                    </div>
+                </div>
             </li>
         </ul>
     </div>
